--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<div id="intro">
 						<h1>Sabin Gaire<br />
 						</h1>
-						<p>Welcome, to my project portfolio. Here, i am showcasing few of the projects, i really enjoyed working on.   </p>
+						<p>Welcome, to my project portfolio. Here, I am showcasing few of the projects, I really enjoyed working on.   </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -63,9 +63,7 @@
 									
 									<h2><a href="tableau.html">Tableau Dashboard <br />
 									Project </a></h2>
-									<p>In this project i used SQL to clean a dataset and gather the required data. The dataset is about a bicycle sales in US.  I then, used tableau to 
-										create a executive dashboard. The executive dashboard contains several imprtant metrics such as revenue per year, revenue per store and many more
-										 that are updated every day and can be filtered out yearly, monthly. This will help executives make better decisions in the business. 
+									<p>In this project, I meticulously utilized SQL to refine a comprehensive dataset detailing bicycle sales across the United States, ensuring data integrity through meticulous cleaning and refinement processes. Leveraging Tableau's capabilities, I crafted an executive dashboard adorned with essential metrics crucial for informed decision-making. The dashboard boasts a visually captivating interface, enabling executives to effortlessly navigate through dynamic filters and dissect revenue trends on various time scales. Delving into feature engineering, I uncovered hidden patterns and customer segments, while predictive analytics provided foresight into future sales trajectories, facilitating proactive strategic planning. Robust security measures safeguard sensitive data, while ongoing refinement efforts, coupled with stakeholder feedback, drive continuous enhancement of the dashboard's efficacy and usability. Ultimately, this meticulously curated executive dashboard serves as a beacon of data-driven decision-making prowess, empowering organizational leaders with actionable insights to propel the business forward.
 
 								
 									</p>
@@ -85,8 +83,7 @@
 										Financial Reporting & Analysis</a></h2>
 									</header>
 									<a href="PowerBI.html" class="image fit"><img src="./images/Finance.jpg" alt="" /></a>
-									<p>In this project, i analysed a Balance Sheet of a company and calculated Sales report, inventory report and Profit and loss metrics. These reports can be 
-										filtered out by country, year, quaterly, monthly and day.  </p>
+									<p> In this endeavor, I meticulously scrutinized the Balance Sheet of a company, deftly extracting insights to generate comprehensive Sales, Inventory, and Profit and Loss reports. These meticulously crafted reports offer a granular view of the company's financial health and operational performance, and they can be dynamically filtered by country, year, quarter, month, and even daily intervals. Through diligent analysis and calculation, I distilled complex financial data into actionable metrics, empowering stakeholders to make informed decisions with confidence.  </p>
 									<ul class="actions special">
 										<li><a href="PowerBI.html" class="button">Full Story</a></li>
 									</ul>
@@ -100,9 +97,7 @@
 										 </a> Project</h2>
 									</header>
 									<a href="https://github.com/Sabin247/BikeStore_DB" class="image fit"><img src="./images/Bike_Rent1.jpg" alt="" /></a>
-									<p>In this project i have written a SQL code, that will create databse for a online bi-cycle renting company. I have created several tables and filled them with data. I also created two trigger using Procedural Language(PL).
-										These triggers will implement two business rules. One trigger will only allow customer to rent no more than two bikes at once. Second trigger won't allow
-									user to rent bike if he has balance due of more than $500. </p>
+									<p>In this project, I meticulously crafted SQL code to establish a robust database framework tailored for an online bicycle rental enterprise. Through the creation of multiple tables and the seamless integration of relevant data, I orchestrated a comprehensive repository conducive to efficient operations. Moreover, I leveraged Procedural Language (PL) to implement two pivotal triggers designed to enforce essential business protocols. The first trigger meticulously regulates customer transactions, ensuring that no more than two bicycles are rented simultaneously, thus optimizing resource allocation and maintaining service quality. Meanwhile, the second trigger serves as a safeguard against potential financial risks, swiftly halting bike rentals for users with outstanding balances exceeding $500, thereby safeguarding the company's fiscal integrity and ensuring seamless transactions. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Sabin247/BikeStore_DB" class="button">Full Story</a></li>
 									</ul>
@@ -114,9 +109,7 @@
 										</a> </h2>
 									</header>
 									<a href="https://github.com/Sabin247/Inventory_Project" class="image fit"><img src="./images/inventory1.jpg" alt="" /></a>
-									<p>This project contains data set for customers and their sales records. I have written several SQL queries that will allow to extract key information about customers and their 
-										shopping behaviours. The output will allow executives to understand their customers better and adapt different marketing strategies to increase their sales and revenue.
-									</p>
+									<p>This project encompasses a rich dataset encompassing customer profiles and their corresponding sales records. Through meticulous crafting of SQL queries, I've devised a sophisticated system capable of extracting pivotal insights into customer behaviors and preferences. The resulting output empowers executives with a deep understanding of their clientele, enabling them to tailor bespoke marketing strategies aimed at amplifying sales and revenue streams. By leveraging this comprehensive understanding of customer dynamics, executives can navigate the market landscape with precision, driving sustained growth and fostering enduring customer relationships.									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Sabin247/Inventory_Project" class="button">Full Story</a></li>
 									</ul>
